==> 1994timmeh/NucleoESP8266WSN/csse4011-project/np2/src/boards/netduinoplus2/mmc/mmc_spi.c <==
#include "diskio.h"		/* Common include file for FatFs and disk I/O layer */
#include "netduinoplus2.h"
#include "debug_printf.h"
#define	INIT_PORT()	mmc_spi_init()	/* Initialize MMC control port (CS=H, CLK=L, DI=H, DO=in) */
#define DLY_US(n)	dly_us(n)	/* Delay n microseconds */
#define MMC_CS_LOW()       GPIO_ResetBits(NP2_MMC_SPI_CS_GPIO_PORT, NP2_MMC_SPI_CS_PIN)
#define MMC_CS_HIGH()      GPIO_SetBits(NP2_MMC_SPI_CS_GPIO_PORT, NP2_MMC_SPI_CS_PIN)
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)			/* SEND_IF_COND */
#define CMD9	(9)			/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define CMD13	(13)		/* SEND_STATUS */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */
#define CMD16	(16)		/* SET_BLOCKLEN */
#define CMD17	(17)		/* READ_SINGLE_BLOCK */
#define CMD18	(18)		/* READ_MULTIPLE_BLOCK */
#define CMD23	(23)		/* SET_BLOCK_COUNT */
#define	ACMD23	(0x80+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(24)		/* WRITE_BLOCK */
#define CMD25	(25)		/* WRITE_MULTIPLE_BLOCK */
#define CMD41	(41)		/* SEND_OP_COND (ACMD) */
#define CMD55	(55)		/* APP_CMD */
#define CMD58	(58)		/* READ_OCR */
#define CT_MMC		0x01		/* MMC ver 3 */
#define CT_SD1		0x02		/* SD ver 1 */
#define CT_SD2		0x04		/* SD ver 2 */
#define CT_SDC		0x06		/* SD */
#define CT_BLOCK	0x08		/* Block addressing */

void mmc_spi_init(void) {

#ifdef DEBUG
	debug_printf("MMCSPI DEBUG: mmc_spi_init\n\r");
#endif		

	RCC_PCLK1Config(RCC_CFGR_PPRE1_DIV16);
	RCC_PCLK1Config(RCC_CFGR_PPRE2_DIV16);
	
  	/* Enable the SPI periph */
  	RCC_APB1PeriphClockCmd(NP2_MMC_SPI_CLK, ENABLE);

  	/* Enable SCK, MOSI and MISO GPIO clocks */
  	RCC_AHB1PeriphClockCmd(NP2_MMC_SPI_SCK_GPIO_CLK | NP2_MMC_SPI_CS_GPIO_CLK, ENABLE);

	GPIO_PinAFConfig(NP2_MMC_SPI_SCK_GPIO_PORT, NP2_MMC_SPI_SCK_SOURCE, NP2_MMC_SPI_SCK_AF);
  	GPIO_PinAFConfig(NP2_MMC_SPI_MISO_GPIO_PORT, NP2_MMC_SPI_MISO_SOURCE, NP2_MMC_SPI_MISO_AF);
  	GPIO_PinAFConfig(NP2_MMC_SPI_MOSI_GPIO_PORT, NP2_MMC_SPI_MOSI_SOURCE, NP2_MMC_SPI_MOSI_AF); 
	
  	/* Enable CS/PWR  GPIO clock */
  
	/* SPI SCK pin configuration */
  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
  	GPIO_InitStructure.GPIO_Pin = NP2_MMC_SPI_SCK_PIN;
  	GPIO_Init(NP2_MMC_SPI_SCK_GPIO_PORT, &GPIO_InitStructure);

  	/* SPI MISO pin configuration */
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;		//Must be set as pull up
  	GPIO_InitStructure.GPIO_Pin = NP2_MMC_SPI_MISO_PIN;
  	GPIO_Init(NP2_MMC_SPI_MISO_GPIO_PORT, &GPIO_InitStructure);

	/* SPI  MOSI pin configuration */
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  	GPIO_InitStructure.GPIO_Pin =  NP2_MMC_SPI_MOSI_PIN;
  	GPIO_Init(NP2_MMC_SPI_MOSI_GPIO_PORT, &GPIO_InitStructure);

	 
  	/* SPI configuration -------------------------------------------------------*/
  	SPI_I2S_DeInit(NP2_MMC_SPI);
  	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
  	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
  	SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;
  	SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;
  	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft | SPI_NSSInternalSoft_Set;
  	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_256;
  	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
  	SPI_InitStructure.SPI_CRCPolynomial = 0;
  	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
  	SPI_Init(NP2_MMC_SPI, &SPI_InitStructure);

  	/* Enable SPI3  */
  	SPI_Cmd(NP2_MMC_SPI, ENABLE);

  	/* Configure GPIO PIN for MMC Chip select */
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
  	GPIO_InitStructure.GPIO_Pin = NP2_MMC_SPI_CS_PIN;
  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
  	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  	GPIO_Init(NP2_MMC_SPI_CS_GPIO_PORT, &GPIO_InitStructure);

  	/* Deselect : Chip Select high */
  	GPIO_SetBits(NP2_MMC_SPI_CS_GPIO_PORT, NP2_MMC_SPI_CS_PIN);
	
	/* Configure GPIO PIN for MMC Power */
  	GPIO_InitStructure.GPIO_Pin = NP2_MMC_PWR_PIN;
  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
  	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  	GPIO_Init(NP2_MMC_PWR_GPIO_PORT, &GPIO_InitStructure);
  	
	/* Turn Power off and on */	
	GPIO_ResetBits(NP2_MMC_PWR_GPIO_PORT, NP2_MMC_PWR_PIN);
	
	dly_us(10);
	
}

static
void xmit_mmc (
	const BYTE* buff,	/* Data to be sent */
	UINT bc				/* Number of bytes to send */
)
{
	int i;
	uint8_t rxbyte;
#ifdef DEBUGx
	debug_printf("MMCSPI DEBUG: xmit_mmc: %d bytes\n\r", bc);
#endif		

	//taskENTER_CRITICAL();
	
    for(i=0;i<bc; i++)                            		// then write all unsigned char in buffer(*pBuf)
    {
		MMC_CS_LOW();
#ifdef DEBUGx
		debug_printf("*%d-", i);
#endif 	

		while (SPI_I2S_GetFlagStatus(NP2_MMC_SPI, SPI_I2S_FLAG_TXE) == RESET);

		SPI_I2S_SendData(NP2_MMC_SPI, buff[i]);

		dly_us(100);
		while (SPI_I2S_GetFlagStatus(NP2_MMC_SPI, SPI_I2S_FLAG_BSY) == SET);

		//dly_us(500);

  		/* Send a Byte through the SPI peripheral */
  		
  		//dly_us(100);
  		/* Wait to receive a Byte */
  		while (SPI_I2S_GetFlagStatus(NP2_MMC_SPI, SPI_I2S_FLAG_RXNE) == RESET);
		
  		/* Return the Byte read from the SPI bus */
  		rxbyte = (uint8_t)SPI_I2S_ReceiveData(NP2_MMC_SPI);
		
#ifdef DEBUGx
		debug_printf(" %d -", i);
#endif		

		dly_us(100);
		MMC_CS_HIGH();
		dly_us(100);
#ifdef DEBUGx
		debug_printf("%d ", rxbyte);
#endif 	
    }

#ifdef DEBUGx
		debug_printf(" End\n\r");
#endif		

	//taskEXIT_CRITICAL();
}
