==> 1994timmeh/NucleoESP8266WSN/csse4011-project/np2/src/boards/nucleof401/mmc/mmc_spi.c <==
#define DEBUGx
#include "diskio.h"		/* Common include file for FatFs and disk I/O layer */
#include "board.h"
#include "stm32f4xx_hal_conf.h"
#include "debug_printf.h"
#define DEBUGx
#define DEBUG
#define	INIT_PORT()	mmc_spi_init()	/* Initialize MMC control port (CS=H, CLK=L, DI=H, DO=in) */
#define DLY_US(n)	dly_us(n)	/* Delay n microseconds */
#define MMC_CS_LOW()       HAL_GPIO_WritePin(BRD_D4_GPIO_PORT, BRD_D4_PIN, 0)
#define MMC_CS_HIGH()      HAL_GPIO_WritePin(BRD_D4_GPIO_PORT, BRD_D4_PIN, 1)
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)			/* SEND_IF_COND */
#define CMD9	(9)			/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define CMD13	(13)		/* SEND_STATUS */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */
#define CMD16	(16)		/* SET_BLOCKLEN */
#define CMD17	(17)		/* READ_SINGLE_BLOCK */
#define CMD18	(18)		/* READ_MULTIPLE_BLOCK */
#define CMD23	(23)		/* SET_BLOCK_COUNT */
#define	ACMD23	(0x80+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(24)		/* WRITE_BLOCK */
#define CMD25	(25)		/* WRITE_MULTIPLE_BLOCK */
#define CMD41	(41)		/* SEND_OP_COND (ACMD) */
#define CMD55	(55)		/* APP_CMD */
#define CMD58	(58)		/* READ_OCR */
#define CT_MMC		0x01		/* MMC ver 3 */
#define CT_SD1		0x02		/* SD ver 1 */
#define CT_SD2		0x04		/* SD ver 2 */
#define CT_SDC		0x06		/* SD */
#define CT_BLOCK	0x08		/* Block addressing */

void mmc_spi_init(void) {

#ifdef DEBUG
	debug_printf("MMCSPI DEBUG: mmc_spi_init\n\r");
#endif
	__GPIOA_CLK_ENABLE();
	__GPIOB_CLK_ENABLE();
	__GPIOC_CLK_ENABLE();
	__SPI1_CLK_ENABLE();


//	RCC_PCLK1Config(RCC_CFGR_PPRE1_DIV16);
//	RCC_PCLK1Config(RCC_CFGR_PPRE2_DIV16);
//
//  	/* Enable the SPI periph */
//  	RCC_APB1PeriphClockCmd(NP2_MMC_SPI_CLK, ENABLE);
//
//  	/* Enable SCK, MOSI and MISO GPIO clocks */
//  	RCC_AHB1PeriphClockCmd(NP2_MMC_SPI_SCK_GPIO_CLK | NP2_MMC_SPI_CS_GPIO_CLK, ENABLE);
//
//	GPIO_PinAFConfig(NP2_MMC_SPI_SCK_GPIO_PORT, NP2_MMC_SPI_SCK_SOURCE, NP2_MMC_SPI_SCK_AF);
//  	GPIO_PinAFConfig(NP2_MMC_SPI_MISO_GPIO_PORT, NP2_MMC_SPI_MISO_SOURCE, NP2_MMC_SPI_MISO_AF);
//  	GPIO_PinAFConfig(NP2_MMC_SPI_MOSI_GPIO_PORT, NP2_MMC_SPI_MOSI_SOURCE, NP2_MMC_SPI_MOSI_AF);
	
  	/* Enable CS/PWR  GPIO clock */

	/* SPI SCK pin configuration */
	GPIO_InitStructure.Pin = BRD_D13_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
	GPIO_InitStructure.Pull = GPIO_PULLDOWN;
	GPIO_InitStructure.Alternate = BRD_SPI_SCK_AF;
	HAL_GPIO_Init(BRD_D13_GPIO_PORT, &GPIO_InitStructure);

//	/* SPI SCK pin configuration */
//  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
//  	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
//  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
//  	GPIO_InitStructure.GPIO_Pin = NP2_MMC_SPI_SCK_PIN;
//  	GPIO_Init(NP2_MMC_SPI_SCK_GPIO_PORT, &GPIO_InitStructure);

  	/* SPI MISO pin configuration */
	GPIO_InitStructure.Pin = BRD_D12_PIN;				//Pin
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;			//Input Mode
	GPIO_InitStructure.Pull = GPIO_NOPULL;			//Enable Pull up, down or no pull resister
	GPIO_InitStructure.Alternate = BRD_SPI_MISO_AF;
	HAL_GPIO_Init(BRD_D12_GPIO_PORT, &GPIO_InitStructure);	//Initialise Pin

//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
//	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;		//Must be set as pull up
//  	GPIO_InitStructure.GPIO_Pin = NP2_MMC_SPI_MISO_PIN;
//  	GPIO_Init(NP2_MMC_SPI_MISO_GPIO_PORT, &GPIO_InitStructure);


	GPIO_InitStructure.Pin =  BRD_D11_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Pull = GPIO_PULLDOWN;
	GPIO_InitStructure.Alternate = BRD_SPI_MOSI_AF;
	HAL_GPIO_Init(BRD_D11_GPIO_PORT, &GPIO_InitStructure);

//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
//	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
//	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
//  	GPIO_InitStructure.GPIO_Pin =  NP2_MMC_SPI_MOSI_PIN;
//  	GPIO_Init(NP2_MMC_SPI_MOSI_GPIO_PORT, &GPIO_InitStructure);


	/* Set SPI Module */
//	SpiHandle.Instance = (SPI_HandleTypeDef *)(BRD_SPI);

	__HAL_SPI_DISABLE(&SpiHandle);

	/* SPI to Master and 16 baudrate prescaler */
	SpiHandle.Init.Mode              = SPI_MODE_MASTER;
	SpiHandle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_16;
	SpiHandle.Init.Direction         = SPI_DIRECTION_2LINES;
	SpiHandle.Init.CLKPhase          = SPI_PHASE_1EDGE;
	SpiHandle.Init.CLKPolarity       = SPI_POLARITY_LOW;
	SpiHandle.Init.CRCCalculation    = SPI_CRCCALCULATION_DISABLED;
	SpiHandle.Init.CRCPolynomial     = 0;
	SpiHandle.Init.DataSize          = SPI_DATASIZE_8BIT;
	SpiHandle.Init.FirstBit          = SPI_FIRSTBIT_MSB;
	SpiHandle.Init.NSS               = SPI_NSS_SOFT;
	SpiHandle.Init.TIMode            = SPI_TIMODE_DISABLED;

	SpiHandle.Instance = (SPI_TypeDef *)(SPI1_BASE);

	/* Initailise SPI parameters */
	HAL_SPI_Init(&SpiHandle);

	/* Enable SPI */
	__HAL_SPI_ENABLE(&SpiHandle);


//  	SPI_I2S_DeInit(NP2_MMC_SPI);
//  	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
//  	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
//  	SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;
//  	SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;
//  	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft | SPI_NSSInternalSoft_Set;
//  	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_256;
//  	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
//  	SPI_InitStructure.SPI_CRCPolynomial = 0;
//  	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
//  	SPI_Init(NP2_MMC_SPI, &SPI_InitStructure);
//
//  	/* Enable SPI3  */
//  	SPI_Cmd(NP2_MMC_SPI, ENABLE);

  	/* Configure GPIO PIN for MMC Chip select */
	GPIO_InitStructure.Pin = BRD_D4_PIN;				//Pin
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;			//Input Mode
	GPIO_InitStructure.Pull = GPIO_PULLDOWN;			//Enable Pull up, down or no pull resister
	GPIO_InitStructure.Speed = GPIO_SPEED_MEDIUM;			//Pin latency
	HAL_GPIO_Init(BRD_D4_GPIO_PORT, &GPIO_InitStructure);	//Initialise Pin

//	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
//  	GPIO_InitStructure.GPIO_Pin = NP2_MMC_SPI_CS_PIN;
//  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
//  	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
//  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//  	GPIO_Init(NP2_MMC_SPI_CS_GPIO_PORT, &GPIO_InitStructure);

  	/* Deselect : Chip Select high */
	HAL_GPIO_WritePin(BRD_D10_GPIO_PORT, BRD_D10_PIN, 1);
  	//GPIO_SetBits(NP2_MMC_SPI_CS_GPIO_PORT, NP2_MMC_SPI_CS_PIN);
	
	/* Configure GPIO PIN for MMC Power */
	// TODO Work out which pin is MMC power (Is this the MMC detect pin?)
//  	GPIO_InitStructure.GPIO_Pin = NP2_MMC_PWR_PIN;
//  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
//  	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
//	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
//  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//  	GPIO_Init(NP2_MMC_PWR_GPIO_PORT, &GPIO_InitStructure);
//
//	/* Turn Power off and on */
//	GPIO_ResetBits(NP2_MMC_PWR_GPIO_PORT, NP2_MMC_PWR_PIN);
	
	dly_us(10);

	#ifdef DEBUG
		debug_printf("Done.\n");
	#endif

	MMC_CS_HIGH();

	
}

static void xmit_mmc (const BYTE* buff, UINT bc) {
	int i;
	uint8_t rxbyte;
	#ifdef DEBUGx
		debug_printf("MMCSPI DEBUG: xmit_mmc: %d\n\r", bc);
	#endif

	for (i = 0; i < bc; i++) {  // then write all unsigned char in buffer(*pBuf)
		MMC_CS_LOW();
		#ifdef DEBUGx
				debug_printf("*%d-", i);
		#endif

		//while (HAL_SPI_GetState(&SpiHandle) != HAL_SPI_STATE_BUSY_TX); //TODO This flag seems wrong

		HAL_SPI_Transmit(&SpiHandle, &(buff[i]), 1, 1);

		dly_us(1000);
		//while (HAL_SPI_GetState(&SpiHandle) == HAL_SPI_STATE_BUSY);

		HAL_SPI_Receive(&SpiHandle, &rxbyte, 1, 1);
		dly_us(1000);

//		while (HAL_SPI_GetFlagStatus(NP2+, SPI_I2S_FLAG_TXE) == RESET);
//
//		SPI_I2S_SendData(NP2_MMC_SPI, buff[i]);
//
//		dly_us(100);
//		while (SPI_I2S_GetFlagStatus(NP2_MMC_SPI, SPI_I2S_FLAG_BSY) == SET);
//
//		//dly_us(500);
//
//		/* Send a Byte through the SPI peripheral */
//
//		//dly_us(100);
//		/* Wait to receive a Byte */
//		while (SPI_I2S_GetFlagStatus(NP2_MMC_SPI, SPI_I2S_FLAG_RXNE) == RESET);
//
//		/* Return the Byte read from the SPI bus */
//		rxbyte = (uint8_t) SPI_I2S_ReceiveData(NP2_MMC_SPI);

		#ifdef DEBUGx
				debug_printf(" %d -", i);
		#endif

		dly_us(100);
		MMC_CS_HIGH();
		dly_us(100);

		#ifdef DEBUGx
				debug_printf("%d ", rxbyte);
		#endif
	}

	#ifdef DEBUGx
		debug_printf(" End\n\r");
	#endif

}
